--- a/result.html
+++ b/result.html
@@ -30,8 +30,17 @@
                 </ul>
              </div>
             </div>
+            <br>
             <div>
-                
+               <h1 class="more">
+                Wait there's more ;)
+               </h1> 
+            </div>
+            <div class="main_result shrink">
+                <img class="s23" src="IPhone 13.png">
+            <div class="main_specs">
+                <h1 class="subheading">IPhone 13⠀⠀</h1>
+            </div>
             </div>
                 
              <div class="other_results">
