--- a/result.html
+++ b/result.html
@@ -36,13 +36,35 @@
                 Wait there's more ;)
                </h1> 
             </div>
+            <div class="other_phones">
             <div class="main_result shrink">
                 <img class="s23" src="IPhone 13.png">
             <div class="main_specs">
-                <h1 class="subheading">IPhone 13⠀⠀</h1>
+                <h1 class="subheading_2">IPhone 13⠀⠀</h1>
             </div>
             </div>
-                
+
+            <div class="main_result shrink">
+                <img class="s23" src="IPhone 13.png">
+            <div class="main_specs">
+                <h1 class="subheading_2">IPhone 13⠀⠀</h1>
+            </div>
+            </div>
+
+            <div class="main_result shrink">
+                <img class="s23" src="IPhone 13.png">
+            <div class="main_specs">
+                <h1 class="subheading_2">IPhone 13⠀⠀</h1>
+            </div>
+            </div>
+
+            <div class="main_result shrink">
+                <img class="s23" src="IPhone 13.png">
+            <div class="main_specs">
+                <h1 class="subheading_2">IPhone 13⠀⠀</h1>
+            </div>
+            </div>
+            </div>    
              <div class="other_results">
 
             </div>
